--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="src\Graphics\Screen.cpp" />
     <ClCompile Include="src\Graphics\ScreenBuffer.cpp" />
     <ClCompile Include="src\Shapes\Line2D.cpp" />
+    <ClCompile Include="src\Shapes\Star2D.cpp" />
     <ClCompile Include="src\Utils\DynamicIntArray.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Utils\Utils.cpp" />
@@ -184,6 +185,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\Shapes\Line2D.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Shapes\Star2D.h">
       <SubType>
       </SubType>
     </ClInclude>
