--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -193,6 +193,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="src\Scenes\Scene.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\Shapes\AARectangle.h">
       <SubType>
       </SubType>
