--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -131,7 +131,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>D:\C++\Programas\Arcade_Game\Arcade_Game\src\Scenes;D:\C++\Programas\Arcade_Game\Arcade_Game\src\App;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Shapes;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Graphics;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Utils;D:\C++\librerías\Dev\SDL2-2.24.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\C++\Programas\Arcade_Game\Arcade_Game\src\Input;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Scenes;D:\C++\Programas\Arcade_Game\Arcade_Game\src\App;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Shapes;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Graphics;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Utils;D:\C++\librerías\Dev\SDL2-2.24.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -149,7 +149,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>D:\C++\Programas\Arcade_Game\Arcade_Game\src\Scenes;D:\C++\Programas\Arcade_Game\Arcade_Game\src\App;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Shapes;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Graphics;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Utils;D:\C++\librerías\Dev\SDL2-2.24.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\C++\Programas\Arcade_Game\Arcade_Game\src\Input;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Scenes;D:\C++\Programas\Arcade_Game\Arcade_Game\src\App;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Shapes;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Graphics;D:\C++\Programas\Arcade_Game\Arcade_Game\src\Utils;D:\C++\librerías\Dev\SDL2-2.24.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -165,6 +165,7 @@
     <ClCompile Include="src\Graphics\Color.cpp" />
     <ClCompile Include="src\Graphics\Screen.cpp" />
     <ClCompile Include="src\Graphics\ScreenBuffer.cpp" />
+    <ClCompile Include="src\Input\GameController.cpp" />
     <ClCompile Include="src\Scenes\ArcadeScene.cpp" />
     <ClCompile Include="src\Shapes\AARectangle.cpp" />
     <ClCompile Include="src\Shapes\Circle.cpp" />
@@ -191,6 +192,14 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\Graphics\ScreenBuffer.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Input\GameController.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Input\InputAction.h">
       <SubType>
       </SubType>
     </ClInclude>
