--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -253,6 +253,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="src\Utils\FileCommandLoader.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\Utils\Utils.h" />
     <ClInclude Include="src\Utils\Vec2D.h" />
   </ItemGroup>
