Paddle class for the BreakOut game

--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="src\App\App.cpp" />
     <ClCompile Include="src\Games\BreakOut\BreakOut.cpp" />
     <ClCompile Include="src\Games\BreakOut\Excluder.cpp" />
+    <ClCompile Include="src\Games\BreakOut\Paddle.cpp" />
     <ClCompile Include="src\Graphics\Color.cpp" />
     <ClCompile Include="src\Graphics\Screen.cpp" />
     <ClCompile Include="src\Graphics\ScreenBuffer.cpp" />
@@ -197,6 +198,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\Games\BreakOut\Excluder.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Games\BreakOut\Paddle.h">
       <SubType>
       </SubType>
     </ClInclude>
