--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -162,6 +162,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\App\App.cpp" />
+    <ClCompile Include="src\Games\BreakOut\Ball.cpp" />
     <ClCompile Include="src\Games\BreakOut\BreakOut.cpp" />
     <ClCompile Include="src\Games\BreakOut\Excluder.cpp" />
     <ClCompile Include="src\Games\BreakOut\Paddle.cpp" />
@@ -186,6 +187,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\App\App.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Games\BreakOut\Ball.h">
       <SubType>
       </SubType>
     </ClInclude>
