--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="src\Games\BreakOut\Ball.cpp" />
     <ClCompile Include="src\Games\BreakOut\BreakOut.cpp" />
     <ClCompile Include="src\Games\BreakOut\Excluder.cpp" />
+    <ClCompile Include="src\Games\BreakOut\LevelBoundary.cpp" />
     <ClCompile Include="src\Games\BreakOut\Paddle.cpp" />
     <ClCompile Include="src\Graphics\Color.cpp" />
     <ClCompile Include="src\Graphics\Screen.cpp" />
@@ -203,6 +204,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\Games\BreakOut\Excluder.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Games\BreakOut\LevelBoundary.h">
       <SubType>
       </SubType>
     </ClInclude>
