Default test level added!

--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="src\Games\BreakOut\Ball.cpp" />
     <ClCompile Include="src\Games\BreakOut\Block.cpp" />
     <ClCompile Include="src\Games\BreakOut\BreakOut.cpp" />
+    <ClCompile Include="src\Games\BreakOut\BreakoutGameLevel.cpp" />
     <ClCompile Include="src\Games\BreakOut\Excluder.cpp" />
     <ClCompile Include="src\Games\BreakOut\LevelBoundary.cpp" />
     <ClCompile Include="src\Games\BreakOut\Paddle.cpp" />
@@ -205,6 +206,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\Games\BreakOut\BreakOut.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Games\BreakOut\BreakoutGameLevel.h">
       <SubType>
       </SubType>
     </ClInclude>
