--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -217,6 +217,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="src\Games\BreakOut\LayoutBlock.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\Games\BreakOut\LevelBoundary.h">
       <SubType>
       </SubType>
