--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="src\Games\BreakOut\Excluder.cpp" />
     <ClCompile Include="src\Games\BreakOut\LevelBoundary.cpp" />
     <ClCompile Include="src\Games\BreakOut\Paddle.cpp" />
+    <ClCompile Include="src\Graphics\BMPImage.cpp" />
     <ClCompile Include="src\Graphics\Color.cpp" />
     <ClCompile Include="src\Graphics\Screen.cpp" />
     <ClCompile Include="src\Graphics\ScreenBuffer.cpp" />
@@ -233,6 +234,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="src\Graphics\BMPImage.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\Graphics\Color.h">
       <SubType>
       </SubType>
@@ -242,6 +247,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\Graphics\ScreenBuffer.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Graphics\SpriteSheet.h">
       <SubType>
       </SubType>
     </ClInclude>
