--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -163,6 +163,7 @@
   <ItemGroup>
     <ClCompile Include="src\App\App.cpp" />
     <ClCompile Include="src\App\Button.cpp" />
+    <ClCompile Include="src\Graphics\Animation.cpp" />
     <ClCompile Include="src\Scenes\ButtonOptionsScene.cpp" />
     <ClCompile Include="src\Games\BreakOut\Ball.cpp" />
     <ClCompile Include="src\Games\BreakOut\Block.cpp" />
@@ -200,6 +201,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\App\Button.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Graphics\Animation.h">
       <SubType>
       </SubType>
     </ClInclude>
