--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -105,6 +105,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <OptimizeReferences>true</OptimizeReferences>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -138,6 +140,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>D:\C++\librerías\Dev\SDL2-2.24.0\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OptimizeReferences>true</OptimizeReferences>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -163,7 +167,9 @@
   <ItemGroup>
     <ClCompile Include="src\App\App.cpp" />
     <ClCompile Include="src\App\Button.cpp" />
+    <ClCompile Include="src\Games\PacMan\Actor.cpp" />
     <ClCompile Include="src\Games\PacMan\PacmanGame.cpp" />
+    <ClCompile Include="src\Games\PacMan\PacmanGameUtils.cpp" />
     <ClCompile Include="src\Games\PacMan\PacmanLevel.cpp" />
     <ClCompile Include="src\Games\PacMan\Scenes\PacmanStartScene.cpp" />
     <ClCompile Include="src\Graphics\AnimatedSprite.cpp" />
@@ -209,7 +215,15 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="src\Games\PacMan\Actor.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="src\Games\PacMan\PacmanGame.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Games\PacMan\PacmanGameUtils.h">
       <SubType>
       </SubType>
     </ClInclude>
