--- a/Arcade_Game/Arcade_Game.vcxproj
+++ b/Arcade_Game/Arcade_Game.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="src\App\App.cpp" />
     <ClCompile Include="src\App\Button.cpp" />
     <ClCompile Include="src\Games\PacMan\Actor.cpp" />
+    <ClCompile Include="src\Games\PacMan\Pacman.cpp" />
     <ClCompile Include="src\Games\PacMan\PacmanGame.cpp" />
     <ClCompile Include="src\Games\PacMan\PacmanGameUtils.cpp" />
     <ClCompile Include="src\Games\PacMan\PacmanLevel.cpp" />
@@ -216,6 +217,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="src\Games\PacMan\Actor.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="src\Games\PacMan\Pacman.h">
       <SubType>
       </SubType>
     </ClInclude>
