--- a/Arcade_Game/Arcade_Game.vcxproj.filters
+++ b/Arcade_Game/Arcade_Game.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="src\Games\PacMan\Actor.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="src\Games\PacMan\Pacman.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Utils\Vec2D.h">
@@ -267,6 +270,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="src\Games\PacMan\Actor.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Games\PacMan\Pacman.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
